--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -673,7 +673,7 @@ NB: For Educational Purpose<br/><br/>
 </div>
 <div class="content">
 <h1>Trick: Invite All Friends on Facebook(One-Click) </h1>
-<p>NB: For Educational Purpose. I will be showing you How to Invite All Friends on Facebook with just a single click...</p>
+<p>NB: For Educational Purpose. I will be showing you How to Invite All Friends on Facebook with just...</p>
 <button class="btn btnD2" href="#myModal2104">Read More</button>
 <div class="clearfix"></div>
 </div>
