--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -128,8 +128,8 @@
     <div class="modal-content">
 	<div class="modal-header"><h2>VIDEO</h2><span class="close">&times;</span></div>
       <div class="modal-body">
-	  <center><img src="images/desktop-images/remove last-name-on-facebook-0.jpg" width="40%" class="img-modal"></center><br/>
-	  <p class="modal-h">Facebooks Trick</p>
+	  <center><img src="images/desktop-images/remove last-name-on-facebook-0.jpg" width="40%" class="img-modal"></center>
+	  <p class="modal-h">Trick: Remove your Middle Name & Last Name on your Facebook Profile</p>
       <p class="modal-p">I will be showing you How to Remove and delete your Middle 
 	  Name and Last Name on your Facebook Account. <br/>
 	  This trick works on both Chrome and Firefox. 
