Updated Website name

--- a/category-desktop-support-operating-systems.html
+++ b/category-desktop-support-operating-systems.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -103,7 +103,7 @@ Windows 10 PRO x86/x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -171,7 +171,7 @@ Windows 8.1 Pro VL x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -237,7 +237,7 @@ Windows 7 PRO SP1 x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -307,7 +307,7 @@ Windows 7 SP1 All-In-One x86/x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -383,7 +383,7 @@ Kali Linux 2019.1 also includes updated packages for theHarvester, DBeaver, and 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -465,7 +465,7 @@ Linux Mint 19.1 - Xfce<br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -524,7 +524,7 @@ Ubuntu 18.10 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -576,7 +576,7 @@ macOS Mojave DMG:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -631,7 +631,7 @@ Android Oreo ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
