--- a/category-desktop-support-os-drivers.html
+++ b/category-desktop-support-os-drivers.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -126,7 +126,7 @@ File size: 41.4MB <a href="https://mega.nz/#!EMoQBKpJ!GIy4ukJanaa4yimq2UtY21YU-T
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -180,7 +180,7 @@ DP_Bluetooth_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -249,7 +249,7 @@ DP_CardReader_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -323,7 +323,7 @@ DP_Chipset_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -387,7 +387,7 @@ DP_LAN_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -467,7 +467,7 @@ DP_MassStorage_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -546,7 +546,7 @@ DP_Misc_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -598,7 +598,7 @@ DP_Modem_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -677,7 +677,7 @@ DP_Monitor_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -730,7 +730,7 @@ DP_Notebook_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -780,7 +780,7 @@ DP_Printer_13003.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -874,7 +874,7 @@ DP_Sound_ADI_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -931,7 +931,7 @@ DP_Sound_CMedia_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -988,7 +988,7 @@ DP_Sound_Conexant_13031.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1032,7 +1032,7 @@ DP_Sound_Creative_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1075,7 +1075,7 @@ DP_Sound_IDT_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1127,7 +1127,7 @@ DP_Sound_Others_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1178,7 +1178,7 @@ DP_Sound_VIA_13014.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1220,7 +1220,7 @@ DP_Sounds_HDMI_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1267,7 +1267,7 @@ DP_Sounds_Realtek_13022.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1392,7 +1392,7 @@ DP_Telephone_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1437,7 +1437,7 @@ DP_TV_Aver_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1481,7 +1481,7 @@ DP_TV_Beholder_13014.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1535,7 +1535,7 @@ DP_TV_DVB_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1588,7 +1588,7 @@ DP_TV_Others_13012.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1634,7 +1634,7 @@ DP_Video_AMD_Desktop_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1697,7 +1697,7 @@ DP_Video_AMD_Notebook_13023.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1756,7 +1756,7 @@ DP_Video_Intel_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1810,7 +1810,7 @@ DP_Video_MacBook_13015.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1857,7 +1857,7 @@ DP_Video_nVIDIA_Desktop_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1905,7 +1905,7 @@ DP_Video_nVIDIA_Notebook_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -1952,7 +1952,7 @@ DP_Video_Others_13032.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -2028,7 +2028,7 @@ DP_WebCam_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -2093,7 +2093,7 @@ DP_WLAN_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
@@ -2157,7 +2157,7 @@ DP_xUSB_13033.7z
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 	 </div>
