--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -101,7 +101,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 	 </p>
 
@@ -140,7 +140,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -197,7 +197,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 	 </p>
 
@@ -234,7 +234,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -287,7 +287,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 	 </p>
 
@@ -304,7 +304,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 </div>
 <div class="content">
 <h1>Hack: How to Activate Avast Premier Permanently</h1>
-<p>Need Avast Activation Licence? Here is a solution for you. Evil Genius offers you Avast Premier and Life time Licence For FREE...</p>
+<p>Need Avast Activation Licence? Here is a solution for you. GENIUX offers you Avast Premier and Life time Licence For FREE...</p>
 <button class="btn btnD2" href="#myModal6">Read More</button>
 <div class="clearfix"></div>
 </div>
@@ -328,7 +328,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -379,7 +379,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 	 </p>
 
@@ -443,7 +443,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -490,7 +490,7 @@ Tips for Using Embed for SVG</br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 	 </p>
 
@@ -553,7 +553,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -601,7 +601,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -649,7 +649,7 @@ NB: For Educational Purpose<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
@@ -703,7 +703,7 @@ NB: For Educational Purpose<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul></p>
 
 	  </div>
