--- a/category-desktop-support-os-windows-activators.html
+++ b/category-desktop-support-os-windows-activators.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -112,7 +112,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -173,7 +173,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -245,7 +245,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
