--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">EVIL GENIUS</span>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -118,7 +118,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -326,7 +326,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -464,7 +464,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -533,7 +533,7 @@ How to Install :<br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -589,7 +589,7 @@ GeniuXMusic APK <b>11.5MB</b> <br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -652,7 +652,7 @@ XHAREit	 v3.8.18 APK: <b>6MB</b> <br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
@@ -716,7 +716,7 @@ RootXplore Modded 4.2.1 APK: <b>6MB</b> <br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support Evil Genius!</li>
+<li>Dont forget to support GENIUX!</li>
 </ul>
 </p>
 
