--- a/Specialize-web-developers-online-coder-23-html-headers.html
+++ b/Specialize-web-developers-online-coder-23-html-headers.html
@@ -404,7 +404,7 @@ The HTML &lt;style&gt; tag is used to specify style sheet for the current HTML d
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
-Evil Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
+Nerd Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
 <span id="dots">...</span><span id="more">
@@ -431,7 +431,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="col-sm-12">
 <div class="headerText text-center">
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Contact me</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">If you have a specific question or suggestion for Evil Geniux.</p>
+<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">If you have a specific question or suggestion for Nerd Geniux.</p>
 </div>
 </div>
 </div>
