--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -550,7 +550,7 @@ How to Install :<br/>
 
 <BR/>
 <span id="dotsq">...</span><span id="moreq" class="display">
-<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Support Evil Geniux by using <b>myAPPs</b> </p></center>
+<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Support Nerd Geniux by using <b>myAPPs</b> </p></center>
 <div class="row">
 
 
@@ -571,7 +571,7 @@ How to Install :<br/>
 	<img src="images/icons/rootexplore.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">RootXplore</p>
     <p class="modal-p">Version: 4.2.1<BR/>
-	Modded and Cracked by : Evil Geniux <br/><br/>
+	Modded and Cracked by : Nerd Geniux <br/><br/>
 The Music application from Sony makes listening to your music files a wonderful experience. Import your music, arrange in playlists and just listen and enjoy. We optimize the sound and restrict the power used, so you can listen for as long as you want.
 <br/><br/>
 The Music application is only compatible with Xperia devices.<br/>
@@ -621,7 +621,7 @@ GeniuXMusic APK <b>11.5MB</b> <br/>
 	<img src="images/icons/SHAREit Premium.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">XHAREit</p>
     <p class="modal-p">Version: 3.8.18<BR/>
-	Modded and Cracked by : Evil Geniux <br/><br/>
+	Modded and Cracked by : Nerd Geniux <br/><br/>
 XHAREit, the world’s fastest cross-platform file transfer tool.<br>
 
 – Share all kinds of files whenever and wherever.<br/>
@@ -698,7 +698,7 @@ XHAREit	 v3.8.18 APK: <b>6MB</b> <br/>
 	<img src="images/icons/rootexplore.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">RootXplore</p>
     <p class="modal-p">Version: 4.2.1<BR/>
-	Modded and Cracked by : Evil Geniux <br/><br/>
+	Modded and Cracked by : Nerd Geniux <br/><br/>
 <b>RootXplorer</b> apk is the ultimate most powerful, most functional and useful file manager for root users. RootXplorer apk allows you to Access the whole of android’s file system including the secured ones.
 <br/><br/>
 You can download 100% Original apk file of RootXplorer from our site without any survey or any other Annoying process as well as we provide you a detailed guide on using RootXplorer.
@@ -775,7 +775,7 @@ RootXplore Modded 4.2.1 APK: <b>6MB</b> <br/>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
-Evil Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
+Nerd Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
 
@@ -803,7 +803,7 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="col-sm-12">
 <div class="headerText text-center">
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Contact me</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">If you have a specific question or suggestion for Evil Geniux.</p>
+<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">If you have a specific question or suggestion for Nerd Geniux.</p>
 </div>
 </div>
 </div>
